@@ -250,10 +250,15 @@ admin.vwiki.title.namespace.add=Add New Namespace
 admin.vwiki.title.namespace.translations=Namespace Translations
 admin.vwiki.title.select=Select Virtual Wiki
 admin.vwiki.title.virtualwiki=Add/Update Virtual Wiki
+allcategories.message.none=There are currently no categories being used on this wiki.
 allcategories.title=Categories
+allfiles.message.none=There have been no files uploaded to this wiki.
 allfiles.title=All Files
+allimages.message.none=There have been no images uploaded to this wiki.
 allimages.title=All Images
+alltopics.message.none=There are no topics in the selected namespace.
 alltopics.title=All Topics
+allusers.message.none=There are no registered user accounts on this wiki.
 allusers.title=All Users
 block.button.block=Block user
 block.caption.duration=Length of block
@@ -468,6 +473,7 @@ move.exception.nodestination=No destination topic name specified.
 move.exception.permission=The topic {0} has been protected and cannot be moved by users without appropriate permissions.
 move.overview=This page provides functionality for moving a topic (including its history) to a new name.  The old topic name will then automatically redirect to the new topic name.  Note that the page <b>cannot</b> be moved if there is already a topic at the new destination.
 move.title=Move {0}
+orphaned.message.none=There are no orphaned topics in the selected namespace.
 orphaned.title=Orphaned Pages
 purge.error.noversion=No topic version with an id of {0} exists.
 purge.error.onlyversion=Topic version {0} is the only version for topic {1} and thus can only be removed by deleting the topic.
@@ -614,6 +620,7 @@ topic.redirect.from=Redirected from {0}
 topic.redirect.infinite=The topic has redirected too many times and cannot be be resolved.
 topic.sharedImage=This file is hosted in a shared repository.  The original file can be found at\: {0}.
 topic.title={0}
+topicsadmin.message.none=There are currently no admin-only topics.
 topicsadmin.title=Admin-Only Topics
 translation.caption.hidetranslated=Hide entries that have already been translated.
 translation.caption.instructions=Please select a language/locale from the drop-down.  To create translations for a new language/locale type the language/locale name into the text box (such as "en" or "en_US") and click "Change".  Valid language and country codes can be found in the <a href\="http\://www.loc.gov/standards/iso639-2/englangn.html" target\="_blank">ISO language code standard</a> and the <a href\="http\://www.iso.ch/iso/en/prods-services/iso3166ma/02iso-3166-code-lists/list-en1.html" target\="_blank">ISO country code standard</a>.  The web application server may need to be restarted for translation changes to become visible on the site.
